// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboardSidebar > renders with class correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" class="border-none" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with collapsedSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="true" data-dragging="false" data-slot="root" style="--width: 10%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with collapsible correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with content slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with default slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class="">Default slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with defaultSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 50%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with footer slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <div data-slot="footer" class="">Footer slot</div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with header slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <div data-slot="header" class="">Header slot</div>
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with id correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-test" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with maxSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with minSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with mode drawer correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <div data-state="open" style="pointer-events: auto;" data-vaul-overlay="" data-vaul-snap-points="false" data-vaul-snap-points-overlay="true" data-slot="overlay" class=""></div>
  <div data-dismissable-layer="" style="--snap-point-height: 0; pointer-events: auto;" tabindex="-1" data-vaul-drawer="" data-vaul-drawer-direction="bottom" data-vaul-delayed-snap-points="false" data-vaul-snap-points="false" data-slot="content" id="" role="dialog" aria-describedby="reka-dialog-description-v-2" aria-labelledby="reka-dialog-title-v-1" data-state="open">
    <div data-vaul-drawer-visible="true" data-vaul-handle="" aria-hidden="true" data-slot="handle" class=""><span data-vaul-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="reka-dialog-title-v-1">dashboardSidebar.title</h2><p id="reka-dialog-description-v-2">dashboardSidebar.description</p></span>
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with mode modal correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!---->
  <!--v-if-->
  <!--teleport start-->
  <div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
  <div data-dismissable-layer="" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-2" aria-labelledby="akar-dialog-title-v-1" data-state="open" style="pointer-events: auto;"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-1">dashboardSidebar.title</h2><p id="akar-dialog-description-v-2">dashboardSidebar.description</p></span>
    <div data-slot="header" class=""><button type="button" aria-label="Close sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
    </div>
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with mode slideover correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
  <div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="left" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-2" aria-labelledby="akar-dialog-title-v-1" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-1">dashboardSidebar.title</h2><p id="akar-dialog-description-v-2">dashboardSidebar.description</p></span>
    <div data-slot="header" class=""><button type="button" aria-label="Close sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
    </div>
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with resizable correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <div role="separator" class="" aria-controls="dashboard-sidebar-v-0" data-slot="handle"></div>
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with resize-handle slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>Resize handle slot
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with side right correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with toggle correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!---->
  <!---->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with toggle slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with toggleSide correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
  <div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="left" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-2" aria-labelledby="akar-dialog-title-v-1" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-1">dashboardSidebar.title</h2><p id="akar-dialog-description-v-2">dashboardSidebar.description</p></span>
    <div data-slot="header" class="">
      <!--v-if--><button type="button" aria-label="Close sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
    </div>
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with ui correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class="py-4"></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders without toggle correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0" data-collapsed="false" data-dragging="false" data-slot="root" style="--width: 15%;">
    <!--v-if-->
    <div data-slot="body" class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!---->
  <!---->
  <!--teleport end-->
</div>"
`;
